--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "solparse": "^2.2.8"
   },
   "dependencies": {
-    "eth-saddle": "^0.1.21"
+    "eth-saddle": "^0.1.21",
+    "truffle": "^5.3.1"
   },
   "resolutions": {
     "scrypt.js": "https://registry.npmjs.org/@compound-finance/ethereumjs-wallet/-/ethereumjs-wallet-0.6.3.tgz",
